Fix nested alignamet, closes #39

--- a/src/scss/_gravity-spot.scss
+++ b/src/scss/_gravity-spot.scss
@@ -12,6 +12,7 @@
   --o-direction: 1;
   --o-size-ratio: 1;
   --o-initial-orbit: 0;
+  --o-angle: 0;
   width: 0;
   aspect-ratio: 1;
   position: relative;
